# django-crm

./: README.md  manage.py  pyproject.toml
crm/: admin.py  models.py  schema.py  urls.py  views.py
crm/migrations/: 0001_initial.py
crmlms/: asgi.py  settings.py  urls.py  wsgi.py
schema/: schema.py
templates/layout/auth/: base.html  index.html  register.html
